# commitkim.github.io

./: .env.example  .gitignore  PROJECT_RULES.md  README.md  build.bat  build_test_deploy.bat  check_json.py  cleanup_all_tasks.bat  cleanup_old_tasks.bat  config.py  conftest.py  debug_accumulation.py  debug_accumulation_v2.py  deploy.bat  gaming_mode_off.bat  gaming_mode_on.bat  gemini_morning_response.txt  gemini_response.txt  migrate_news_json.py  pyproject.toml  raw_response.txt  scheduled_job.bat  setup_schedule.bat  test_gemini.py  test_genai.py  test_morning_summary.py  test_sum.py  test_summary.py  update_slot_machine.bat  wrangler.jsonc  배포
Auto trader/: README.md  automation.bat  config.py  main.py  register_schedule.bat  run_trader.bat  trader.py
Dashboard/: README.md  automation.bat  builder.py  config.py  deploy.py  main.py  preview_design.py  register_schedule.bat  run_auto.bat  setup_kakao.bat
Slot machine/: index.html
Summariser/: .gitignore  README.md  automation.bat  config.py  main.py  migration_prompt.md  register_schedule.bat  requirements.txt  run_evening.bat  run_morning.bat  run_summary.bat  setup_kakao.bat  test_summariser.bat
apps/: README.md  __init__.py  __main__.py  cli.py
config/: base.yaml  dev.yaml  prod.yaml  test.yaml
core/: README.md  __init__.py  config.py  errors.py  logger.py
docs/: archive.html  index.html  report.html  trade.html
modules/: README.md  __init__.py
scripts/: check_models.py  register_all.py  test_feed.py
tests/: README.md  run_all_tests.bat  test_autotrader.bat  test_autotrader.py  test_dashboard.bat  (+17 more)
(+230 files in other folders)
