[project]
name = "commitkim"
version = "2.0.0"
description = "AI-powered personal assistant: news briefing, crypto trading, and dashboard — all automated"
requires-python = ">=3.11"
readme = "README.md"

[project.dependencies]
# Core
pyyaml = ">=6.0"
python-dotenv = ">=1.0"

# News Briefing
google-genai = ">=0.1"
youtube-transcript-api = ">=0.6"
google-api-python-client = ">=2.0"

# Crypto Trader
pyupbit = ">=0.2"
schedule = ">=1.2"

# Site Builder
jinja2 = ">=3.1"
markdown = ">=3.5"

# Messenger
requests = ">=2.31"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
commitkim = "apps.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
